feat: add logic not finished

--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ body {
     width: 100%;
 }
 
+.grid-item {
+    display: flex;
+    flex: 1;
+}
+
 .control-field {
     display: flex;
     flex-direction: column;
