--- a/style.css
+++ b/style.css
@@ -38,43 +38,30 @@ body {
 
 .etch-container {
     border-style: groove;
-    border-width: 120px;
+    border-width: 100px;
     border-color: var(--mainbg-color);
-    height: 680px;
-    width: 980px;
-}
-
-.white-img-button {
-    display: flex;
-    justify-content: space-between;
-}
-
-.etch-img-btn {
-    height: 120px;
+    height: 880px;
+    width: 880px;
 }
 
 .grid-container {
-    display: flex;
-    flex-shrink: 1;
-    background-color: black;
-    height: 440px;
-    width: 510px;
-}
-
-.grid-item {
-    height: 50px;
-    width: 50px;
-    display: flex;
-    flex: 1 1 0%;
-}
-
-.grid-item-sub {
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
-    flex: 1 1 0%;
 }
+
+.grid-item-row {
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+.grid-item-col {
+    background-color: #fff;
+    flex: 1;
+}
+
 
 .control-field {
     display: flex;
@@ -128,6 +115,3 @@ body {
     border-radius: 50%;
     border: 4px solid #fff
   }
-
-
-
